--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Movie API</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>movie API</title>
+    <style>
+    </style>
   </head>
   <body>
     <div>
       <h1>myFlix</h1>
       <br>
       <p>
-
       </p>
     </div>
   </body>
